# S53-Feb26-S53_Team01-Angular-Rust-Offira

./: README.md
offira-backend/: .env  Cargo.toml
offira-backend/.sqlx/: query-00e48a8078b41ddad63912a9a4b879470dc90399149d80523bfe2d69de0ccd3b.json  query-0323e3b378f1c3c3922259d60e7191b813614b2317e1cda0bf7e2e472a56b056.json  query-1673a21ad1d91a70ab6ca55cbd88926ee9e3071696769a7aa1c800d69be01297.json  query-6cac4bf9c52a3e1c9f7de53f850d1855f1ce93fcdffc225753344ec56c8d75b4.json  query-9867605003f0000ea9d983ebf31eeb449d0b1240a9da21bd8cdf09063b61c175.json  query-b90196cb90e1cf8cefc11d8eae149690f7210e8f4b2fc45190c1a8ef09d114f1.json
offira-backend/src/: main.rs
offira-backend/src/auth/: claims.rs  jwt.rs  mod.rs  password.rs
offira-backend/src/db/: connection.rs
offira-backend/src/errors/: app_error.rs
offira-backend/src/handlers/: auth_handler.rs  invite_handler.rs  leave_balance_handler.rs  leave_policy_handler.rs  leave_request_handler.rs  mod.rs  organization_handler.rs  user_handlers.rs
offira-backend/src/middleware/: auth_middleware.rs  role_middleware.rs
offira-backend/src/models/: auth.rs  auth_response.rs  invite.rs  leave_balance.rs  leave_policy.rs  leave_request.rs  mod.rs  organizations.rs  user.rs
offira-backend/src/routes/: auth_routes.rs  invite_routes.rs  leave_balance_routes.rs  leave_policy_routes.rs  leave_routes.rs  mod.rs  organization_routes.rs  user_routes.rs
offira-backend/src/utils/: email.rs
offira-frontend/: README.md  angular.json  package-lock.json  package.json
offira-frontend/src/: index.html
(+4 files in other folders)
